--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,89 @@
-node_modules/**/*
-.expo/*
-npm-debug.*
+# React Native
+
+## OS
+#
 .DS_Store
+Thumbs.db
+
+## VSCode
+#
+.vscode
+
+## Xcode
+#
+### Build generated
+build/
+DerivedData/
+
+### Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xcuserstate
+project.xcworkspace
+
+### Others
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
+
+### Obj-C/Swift specific
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+### Swift Package Manager
+#
+# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
+Packages/
+Package.pins
+.build/
+
+### CocoaPods
+#
+Pods/
+
+### Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+Carthage/Checkouts
+Carthage/Build
+
+## Android/IntelliJ/AppCode
+#
+build/
+.idea/
+.idea
+.gradle
+local.properties
+*.iml
+
+## Npm/Yarn/Node
+# node.js
+#
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
