--- a/app.json
+++ b/app.json
@@ -1,4 +1,6 @@
 {
+  "name": "PhotoGallery",
+  "displayName": "photo-gallery",
   "expo": {
     "name": "photo-gallery",
     "description": "Photo gallery with Shared Element Transition",
