--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "expo": "^19.0.0",
+    "expo": "^27.0.2",
     "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-19.0.0.tar.gz"
+    "react": "16.3.1",
+    "react-native": "0.55.4"
   }
 }
